# neutron-rs

./: .gitignore  BUILDING.md  Cargo.toml  DESIGN.md  NOTES.md  README.md  TESTING.md  TODO.md  UPDATES.md  build.rs  build.sh  error  full-build.sh  rust-toolchain.toml  setup.sh  switch-view.sh
.cargo/: config.toml
.neutron/: debug.cmd  debug.sh
.neutron/aarch64/: arcboot.ld  arm.json  arm.ld  armv8.json  basic_bios.ld  limine.cfg  run-qemu.sh  stivale2.ld
.neutron/example_inputs/: basics.reis
.neutron/riscv/: link.ld  riscv64.json  run-qemu.sh  xv6.json  xv6.ld
.neutron/x86/: limine.cfg  run.sh  stivale.json  stivale2.ld  x86_64.json
archive/: 2022-01-23-archive.md  build-aarch64.sh  phil_write.rs  run-riscv64.sh  setup.sh
arctest/: basics.rs
docs/: ARCH.md  ARCHIVE.md  ARCTEST.md  DEBUGGING.md  DESIGN.md  Gemfile  TESTING.md  VSCODE.md  _config.yml  index.md
docs/_authors/: jason.md
docs/_layouts/: math.html
docs/pages/arch/: index.md
docs/pages/arch/arm/: bcm2711.md  index.md  rk3588.md  videocore.md
docs/pages/arch/riscv/: index.md
docs/pages/graphics/: index.md
docs/pages/graphics/vulkan/: index.md
docs/pages/neutron/: boot.md  default.md  eif.md  index.md  interrupts.md  ipc.md  memory.md  neutronapi.md  neutronlicense.md  nvm.md  questions.md  quickfs.md  reiapi.md  reishell.md  rust-std.md  services.md  shell.md  vfs.md
docs/pages/neutron/api/: ardaku.md  index.md  rust-std.md
docs/pages/neutron/boot/: aarch64-boot.md  index.md
docs/pages/neutron/configuration/: default.md
docs/pages/neutron/design/: index.md  interrupts.md  ipc.md  memory.md  services.md
docs/pages/neutron/devices/: index.md
docs/pages/neutron/linker/: index.md
docs/pages/neutron/memory/: index.md
docs/pages/neutron/network/: index.md
docs/pages/rei/: agvn.md  arrkia.md  index.md  language-servers.md  reiapi.md  reishell.md
docs/pages/spectre/: index.md
docs/pages/supported_apps/: index.md  krustlet.md
docs/pages/updates/: ARCH.md  ARCHIVE.md  ARCTEST.md  BUILDING.md  DEBUGGING.md  DESIGN.md  EIF.md  MORE.md  NEVERMIND.md  NOTES.md  SHELL.md  TESTING.md  TODO.md  VSCODE.md  index.md
examples/: basics.reis
neutron_kernel/: Cargo.toml
neutron_kernel/src/: kernel.rs  lib.rs
neutron_kernel/src/arch/aarch64/: cpu.rs  entry.rs  exception.rs  mod.rs
neutron_kernel/src/arch/aarch64/entry/: mod.rs  multiboot.rs
neutron_kernel/src/arch/riscv64gc/: interrupt.rs  mod.rs
neutron_kernel/src/arch/riscv64gc/memory/fixed/: buddy.rs
neutron_kernel/src/arch/x86/: mod.rs
neutron_kernel/src/drivers/arm/: mod.rs
neutron_kernel/src/drivers/arm/bcm/: bcm2xxx_gpio.rs  mod.rs
neutron_kernel/src/drivers/rk3399/: mod.rs
neutron_kernel/src/drivers/spectro/: mod.rs  wireless.rs
neutron_kernel/src/exception/: mod.rs
neutron_kernel/src/filesystem/: btrfs.rs  ember.rs  mod.rs  neutronfs.rs
neutron_kernel/src/filesystem/supported/: btrfs.rs  mod.rs
neutron_kernel/src/kernel/: mod.rs
neutron_kernel/src/kmod/: mod.rs
neutron_kernel/src/kmod/graphics/: arcwm.rs  mod.rs  rt.rs
neutron_kernel/src/memory/: addr_space.rs  alloc.rs  mod.rs
neutron_kernel/src/network/: manager.rs
neutron_kernel/src/process/: elf.rs  mod.rs  scheduler.rs  thread.rs
neutron_kernel/src/services/: mod.rs  syscall.rs
neutron_kernel/src/types/: bits.rs  sort.rs
neutron_kernel/src/userland/: mod.rs
neutron_kernel/tests/: basic.rs
not_unittests/: basic.rs
qscripts/: build-aarch64.sh  build-riscv64.sh  doc  full-build.sh  quick-push.sh  run-riscv64.sh  test-riscv64.sh
samples/: SAMPLE.md
scripts/: make-archive.sh
sparx/: spectro.build
sparx/qscripts/: quick-push.sh  run-virt.sh
sparx/scripts/: run-virt.sh
sparx/targets/pi4/: pi4.build
sparx/targets/spectro/: spectro.build
src/: aarch64.x  arcboot.rs  arch_manager.rs  arctest.rs  entry.s  exception.rs  include.rs  kernel.c  lib.rs  limine.rs  limine_boot.rs  main.rs  manager.rs  stephen.rs  stivale.rs  test.rs  userspace.rs
src/arch/: mod.rs
src/arch/aarch64/: boot.S  console.rs  entry.rs  exception.rs  leos_qemu.rs  mod.rs  power.rs  translation.rs
src/arch/amd64/: macros.rs  mod.rs  vga_fb.rs
src/arch/riscv64/: mod.rs  xv6-kernelvec.S  xv6-trampoline.S
src/arch/riscv64gc/: interrupt.rs  memory.rs  mod.rs  xv6-entry.S  xv6_mem.rs
src/arch/x86/: mod.rs
src/arctest/: mod.rs  riscv64gc.rs
src/drivers/: mod.rs
src/drivers/arm/: common.rs  mod.rs
src/drivers/generic/: acpi.rs  mod.rs
src/drivers/pi3/: mod.rs
src/drivers/pi4b/: console.rs  cpu.rs  driver.rs  exception.rs  kernel.ld  memory.rs  mod.rs
src/drivers/spectro/: dummy.rs  graphics.rs  keyboard.rs  mod.rs  mouse.rs  spectrum_soc.rs  tests.rs  vga_buffer.rs
src/exception/: asynchronous.rs  mod.rs
src/filesystem/: HFS.rs  VFS.rs  btrfs.rs  ember.rs  exfat.rs  hfs_v1.rs  mod.rs  neutronfs.rs  quickfs.rs
src/filesystem/supported/: exfat.rs  hfs_v1.rs  mod.rs
src/kernel/: console.rs  entry.rs  mod.rs
src/kernel/arch/: mod.rs
src/kernel/posix/: mod.rs
src/kext/: arcwm.rs  driver_ext.rs  mod.rs
src/kmod/: arcwm.rs  cluster.rs  container.rs  mod.rs  wasm.rs
src/kmod/graphics/: arcwm.rs  kconsole.rs  mod.rs
src/memory/: addr_space.rs  addresser.rs  align.rs  alloc.rs  allocator.rs  interrupt.rs  linked_list_alloc.rs  mod.rs  paging.rs  synchronisation.rs  vmo.rs
src/memory/mmu/: mapping_record.rs  mod.rs  page_alloc.rs  translation_table.rs  types.rs
src/network/: manager.rs  mod.rs  sanity.rs
src/process/: dummy.rs  elf.rs  manager.rs  mod.rs  scheduler.rs  tests.rs
src/services/: dummy.rs  interrupt.rs  manager.rs  mod.rs  sparc.rs  syscall.rs  tests.rs  write.rs  writer.rs
src/types/: bits.rs  mod.rs  ops.rs  paging.rs  synchronisation.rs  time.rs  vec.rs
src/userland/: mod.rs
support/: spectro.build
support/arch/aarch64/: aarch64-default.json  boot.S
support/arch/riscv64/: riscv64-default.json
support/asm/: boot.S
support/ld/: link.ld
support/license/: LICENSE
tests/: basic.rs  doc  should_panic.rs  test_basics.rs  test_kernel.rs
tests/elf/: README.md  keygen_me
toolchains/: doc
(+83 files in other folders)
