[package]
name = "neutron_main"
version = "0.1.1"
edition = "2021"
description = "A full minimal kernel for risc systems"
license = "GPL-3.0-only"

[workspace]
members = ["neutron_kernel"]

[dependencies]
neutron_kernel = { path = "neutron_kernel" }
stivale-boot = { version = "0.3", features = ["helper-macros"], optional = true }
arcboot-api = { version = "*", git = "https://github.com/hyperswine/arcboot-rs.git", optional = true }
limine = { version = "0.1", optional = true }
riscv = "*"
riscv-rt = "*"

[features]
# BOOT PROTOCOLS
arcboot = ["dep:arcboot-api"]
limine = ["dep:limine"]
stivale = ["dep:stivale-boot"]
efi_stub = []
multiboot = []
# BUILTIN
ll_alloc = ["neutron_kernel/ll_alloc"]
