[package]
name = "neutron_kernel"
version = "0.1.0"
edition = "2021"
description = "Neutron logic"

[dependencies]
volatile = "0.4.5"
spin = "0.9.3"
linked_list_allocator = { version = "0.9.1", optional = true }
tock-registers = "0.7.0"
embedded-graphics = { version = "0.7.1", optional = true }
goblin = { version = "0.5.1", default-features = false, features = [
    "elf64",
    "elf32",
    "archive",
    "endian_fd",
    "alloc",
] }
stivale-boot = { version = "0.3.1", optional = true, features = [
    "helper-macros",
] }
# REQUIRED FOR INTERFACING
neutronapi = { git = "https://github.com/hyperswine/neutronapi", optional = true, features = [
    "types",
] }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.2.0"
aarch64 = "0.0.7"

# arcboot should already have those libraries in its runtime but keep for now in case of testing with qemu
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.9"
bootloader = "0.10.12"
uart_16550 = "0.2.18"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv-rt = "0.8.1"

# Used by arcutils `arcutils test --neutron` for higher level testing
[features]
# DEFAULT
default = ["types"]
# KERNEL EXTS
arctest = []
graphics = []
driver_ext = []
# CORE
ll_alloc = ["linked_list_allocator"]
types = ["neutronapi"]
# requires neutronfs crate
neutronfs = []
qfs = []
fatfs = []
