[package]
name = "neutron_kernel"
version = "0.1.0"
edition = "2021"
description = "Neutron logic"

[dependencies]
volatile = "0.4"
spin = "0.9"
linked_list_allocator = { version = "0.10", optional = true }
tock-registers = "0.8"
embedded-graphics = { version = "0.7", optional = true }
goblin = { version = "0.6", default-features = false, features = [
    "elf64",
    "elf32",
    "archive",
    "endian_fd",
    "alloc",
] }
log = "0.4"
arcboot-api = { version = "*", git = "https://github.com/hyperswine/arcboot-rs.git", optional = true }
simple_logger = "4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "8"
aarch64 = "0.0.7"

[dependencies.scroll]
version = "0.11"
default_features = false

# arcboot should already have those libraries in its runtime but keep for now in case of testing with qemu
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
bootloader = "0.11.0"
uart_16550 = "0.2"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv-rt = "0.10.0"

[dev-dependencies]
rstest = "0.16.0"

# Used by arcutils `arcutils test --neutron` for higher level testing
[features]
# DEFAULT
default = []
ll_alloc = ["linked_list_allocator"]
arc = ["dep:arcboot-api"]
# KERNEL EXTS
arctest = []
graphics = []
driver_ext = []
